# zetta-dev

./: AGENTS.md  Cargo.toml  LICENSE-APACHE  LICENSE-GPL  Makefile  README.md  build.rs  config.example.json  keymap.example.json
artifacts/: pane-profile-baseline-1.json  pane-profile-baseline-2.json  pane-profile-baseline-3.json  pane-profile-comparison.md  pane-profile-final-2s-baseline-1.json  pane-profile-final-2s-baseline-2.json  pane-profile-final-2s-baseline-3.json  pane-profile-final-2s-stress-1.json  pane-profile-final-2s-stress-2.json  pane-profile-final-2s-stress-3.json  pane-profile-stress-1.json  pane-profile-stress-2.json  pane-profile-stress-3.json
assets/fonts/meslo-lg-nerd-font/: UPSTREAM.md
assets/themes/solarized/: UPSTREAM.md
crates/: UPSTREAM_AUDIT.md
crates/alacritty_terminal/: Cargo.toml  README.md
crates/alacritty_terminal/src/: event_loop.rs
crates/alacritty_terminal/src/grid/: mod.rs  resize.rs  storage.rs
crates/alacritty_terminal/src/term/: mod.rs
crates/gpui_linux/: Cargo.toml  UPSTREAM.md
crates/gpui_linux/src/linux/: platform.rs
crates/gpui_linux/src/linux/wayland/: client.rs  serial.rs  window.rs
crates/gpui_platform/: Cargo.toml  UPSTREAM.md
crates/terminal/: Cargo.toml  UPSTREAM.md
crates/terminal/src/: alacritty.rs  pty_info.rs  terminal.rs
crates/terminal_view/: Cargo.toml  UPSTREAM.md
crates/terminal_view/src/: standalone.rs  terminal_element.rs  terminal_view.rs
docs/: background-sessions.md  configuration.md  installation.md  performance.md  tools.md  usage.md
resources/linux/: Zetta.desktop
scripts/: install-windows.ps1
sketches/: esp32-zetta-test.ino
src/: app.rs  app_render.rs  background_sessions.rs  command_palette.rs  command_palette_ui.rs  config.rs  http_server.rs  http_server_ui.rs  main.rs  multi_command.rs  multi_command_ui.rs  output_benchmark.rs  pane.rs  performance.rs  process_control.rs  serial_console.rs  serial_console_ui.rs  session_auth_ui.rs  settings_editor.rs  settings_ui.rs  settings_view.rs  startup.rs  tab_search.rs  tftp_server_ui.rs  theme_extensions.rs  window_frame.rs  windows_integration.rs  zetta_assets.rs
src/tests/: app.rs  app_render.rs  background_sessions.rs  command_palette.rs  config.rs  http_server.rs  http_server_ui.rs  multi_command.rs  output_benchmark.rs  pane.rs  performance.rs  process_control.rs  serial_console.rs  settings_editor.rs  settings_ui.rs  startup.rs  tab_search.rs  tftp.rs  theme_extensions.rs  window_frame.rs  windows_integration.rs  zetta_assets.rs
