[package]
name = "zetta"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[features]
default = ["wayland"]
wayland = ["gpui_platform/wayland"]
x11 = ["gpui_platform/x11"]

[dependencies]
anyhow = "1"
assets = { path = "zed/crates/assets" }
gpui = { path = "zed/crates/gpui" }
gpui_platform = { path = "zed/crates/gpui_platform" }
menu = { path = "zed/crates/menu" }
release_channel = { path = "zed/crates/release_channel" }
rust-embed = "8"
schemars = "1"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
settings = { path = "zed/crates/settings" }
task = { path = "zed/crates/task" }
terminal = { path = "crates/terminal" }
terminal_view = { path = "crates/terminal_view" }
theme = { path = "zed/crates/theme" }
theme_settings = { path = "zed/crates/theme_settings" }
ui = { path = "zed/crates/ui" }
util = { path = "zed/crates/util" }
zed_actions = { path = "zed/crates/zed_actions" }

[profile.dev]
debug = 1

[profile.release]
incremental = true
strip = "symbols"
