[package]
name = "zetta"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
default-run = "zetta"

[features]
default = ["wayland"]
wayland = ["gpui_platform/wayland"]
x11 = ["gpui_platform/x11"]
windows-gui = []

[[bin]]
name = "zetta-gui"
path = "src/bin/zetta_gui.rs"
required-features = ["windows-gui"]

[dependencies]
anyhow = "1"
argon2 = "0.5"
libc = "0.2"
async-compression = { version = "0.4", features = ["gzip", "futures-io"] }
async-tar = "0.6"
assets = { path = "zed/crates/assets" }
futures = "0.3"
getrandom = "0.3"
gpui = { path = "zed/crates/gpui" }
gpui_platform = { path = "crates/gpui_platform" }
menu = { path = "zed/crates/menu" }
release_channel = { path = "zed/crates/release_channel" }
reqwest_client = { path = "zed/crates/reqwest_client" }
rust-embed = "8"
schemars = "1"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.37"
regex = "1.11"
serialport = { version = "4.9", default-features = false }
settings = { path = "zed/crates/settings" }
task = { path = "zed/crates/task" }
terminal = { path = "crates/terminal" }
terminal_view = { path = "crates/terminal_view" }
tempfile = "3"
time = { version = "0.3", features = ["formatting", "macros"] }
theme = { path = "zed/crates/theme" }
theme_settings = { path = "zed/crates/theme_settings" }
toml = "0.8"
ui = { path = "zed/crates/ui" }
util = { path = "zed/crates/util" }
zeroize = "1"
zed_actions = { path = "zed/crates/zed_actions" }

[target.'cfg(windows)'.dependencies]
uds_windows = "1.2"
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_Shell_PropertiesSystem",
] }

[build-dependencies]
embed-resource = "3"

[profile.dev]
debug = 1

[profile.release]
incremental = true
# Incremental LLVM partitions have produced missing hidden symbols during the
# final link. Keep incremental crate reuse while avoiding cross-CGU artifacts.
codegen-units = 1
strip = "symbols"
