[package]
name = "terminal_view"
version = "0.1.0"
edition = "2024"
publish = false
license = "GPL-3.0-or-later"

[lib]
path = "src/standalone.rs"
doctest = false

[dependencies]
gpui = { path = "../../zed/crates/gpui", default-features = false }
itertools = "0.14.0"
log = { version = "0.4.16", features = ["kv_unstable_serde", "serde"] }
schemars = { version = "1.0", features = ["indexmap2"] }
serde = { version = "1.0.221", features = ["derive"] }
settings = { path = "../../zed/crates/settings" }
terminal = { path = "../terminal" }
theme = { path = "../../zed/crates/theme" }
theme_settings = { path = "../../zed/crates/theme_settings" }
ui = { path = "../../zed/crates/ui" }
util = { path = "../../zed/crates/util" }
